fix nav ul gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ nav {
 
 ul {
     display: flex;
-    gap: 10px;
+    gap: 20px;
     color: #575757;
 }
 
